src/test/deca/codegen/valid/avecObjet/selection_nested_three_levels.ass
; start main program
; Passe1 table de méthode : C base=3(GB) taille=2
; Passe1 table de méthode : B base=5(GB) taille=2
; Passe1 table de méthode : A base=7(GB) taille=2
; Beginning of main instructions:
	TSTO #9	; Main Program
	BOV pile_pleine
	ADDSP #9
; --------------------------------------------------
; Construction des tables des methodes
; --------------------------------------------------
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD 2(GB), R0
	STORE R0, 4(GB)
	LEA 1(GB), R0
	STORE R0, 5(GB)
	LOAD 2(GB), R0
	STORE R0, 6(GB)
	LEA 1(GB), R0
	STORE R0, 7(GB)
	LOAD 2(GB), R0
	STORE R0, 8(GB)
; --------------------------------------------------
; Code du programme principal
; --------------------------------------------------
	NEW #2, R3
	BOV tas_plein
	LEA 7(GB), R0
	STORE R0, 0(R3)
	PUSH R3
	BSR init.A
	POP R3
	STORE R3, 9(GB)
	NEW #2, R1
	BOV tas_plein
	LEA 5(GB), R0
	STORE R0, 0(R1)
	PUSH R1
	BSR init.B
	POP R1
	LOAD 9(GB), R2
	CMP #null, R2
	BEQ dereferencement_null
	STORE R1, 1(R2)
	NEW #2, R1
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R1)
	PUSH R1
	BSR init.C
	POP R1
	LOAD 9(GB), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 1(R2), R2
	CMP #null, R2
	BEQ dereferencement_null
	STORE R1, 1(R2)
	LOAD #10, R1
	LOAD 9(GB), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 1(R2), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 1(R2), R2
	CMP #null, R2
	BEQ dereferencement_null
	STORE R1, 1(R2)
	LOAD 9(GB), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 1(R2), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 1(R2), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 1(R2), R1
	WINT
	WNL
	HALT
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ Object.equals.true
	LOAD #0, R0
	BRA Object.equals.end
Object.equals.true:
	LOAD #1, R0
Object.equals.end:
	RTS
init.C:
; init.C (this = -2(LB))
	TSTO #1
	BOV pile_pleine
	PUSH R3
	LOAD -2(LB), R2
	LOAD #0, R0
	STORE R0, 1(R2)
	POP R3
	RTS
init.B:
; init.B (this = -2(LB))
	TSTO #1
	BOV pile_pleine
	PUSH R3
	LOAD -2(LB), R2
	LOAD #null, R0
	STORE R0, 1(R2)
	POP R3
	RTS
init.A:
; init.A (this = -2(LB))
	TSTO #1
	BOV pile_pleine
	PUSH R3
	LOAD -2(LB), R2
	LOAD #null, R0
	STORE R0, 1(R2)
	POP R3
	RTS
; Code des méthodes de la classe C
; Code des méthodes de la classe B
; Code des méthodes de la classe A
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : allocation impossible, tas plein"
	WNL
	ERROR
dereferencement_null:
	WSTR "Erreur : dereferencement de null"
	WNL
	ERROR
; end main program
