src/test/deca/codegen/invalid/avecObjet/invalid_cast.ass
; start main program
; Passe1 table de méthode : A base=3(GB) taille=2
; Passe1 table de méthode : B base=5(GB) taille=2
; Passe1 table de méthode : C base=7(GB) taille=2
; Beginning of main instructions:
	TSTO #10	; Main Program
	BOV pile_pleine
	ADDSP #10
; --------------------------------------------------
; Construction des tables des methodes
; --------------------------------------------------
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD 2(GB), R0
	STORE R0, 4(GB)
	LEA 3(GB), R0
	STORE R0, 5(GB)
	LOAD 4(GB), R0
	STORE R0, 6(GB)
	LEA 3(GB), R0
	STORE R0, 7(GB)
	LOAD 4(GB), R0
	STORE R0, 8(GB)
; --------------------------------------------------
; Code du programme principal
; --------------------------------------------------
	NEW #1, R3
	BOV tas_plein
	LEA 5(GB), R0
	STORE R0, 0(R3)
	PUSH R3
	BSR init.B
	POP R3
	STORE R3, 9(GB)
	LOAD 9(GB), R1
	STORE R1, 10(GB)
	HALT
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ Object.equals.true
	LOAD #0, R0
	BRA Object.equals.end
Object.equals.true:
	LOAD #1, R0
Object.equals.end:
	RTS
init.A:
; init.A (this = -2(LB))
	RTS
init.B:
; init.B (this = -2(LB))
	RTS
init.C:
; init.C (this = -2(LB))
	RTS
; Code des méthodes de la classe A
; Code des méthodes de la classe B
; Code des méthodes de la classe C
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : allocation impossible, tas plein"
	WNL
	ERROR
; end main program
